tests/ui/privacy/private-struct-field-in-module.stderr
error[E0616]: field `len` of struct `S` is private
  --> $DIR/private-struct-field-in-module.rs:13:15
   |
LL |     let v = s.len;
   |               ^^^ private field
   |
help: a method `len` also exists, call it with parentheses
   |
LL |     let v = s.len();
   |                  ++

error[E0616]: field `len` of struct `S` is private
  --> $DIR/private-struct-field-in-module.rs:14:7
   |
LL |     s.len = v;
   |       ^^^ private field

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0616`.
